# dynamical_systems_econometrics

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
article/: article_draft.md  arxiv_manuscript.tex  claims_checklist.md  references.bib
article/figures/: 03_return_time_distribution_source.csv  03_return_time_distribution_summary.csv  07_clustered_bootstrap_coverage_source.csv  (+9 more)
configs/: default.yaml  empirical.yaml  empirical_fred_cached.yaml  empirical_fred_refresh.yaml  empirical_multi_remote_refresh.yaml  empirical_multicatalog.yaml  empirical_yfinance_cached.yaml  empirical_yfinance_refresh.yaml  experiment.yaml  figures.yaml  synthetic.yaml
data/: catalog.equity.example.yaml  catalog.example.yaml  catalog.inflation.example.yaml
docs/: api.html  architecture.html  article.html  article_support_matrix.md  benchmarks.html  citation.html  code_audit.md  commands.html  configs.html  contributing.html  data.html  data_sources.md  econometric_baselines.md  empirical_claim_guardrails.md  examples.html  extreme_value_methods.md  faq.html  figures.html  final_code_review.md  github_issue_plan.md  glossary.html  governance.html  index.html  installation.html  limitations.html  methodological_notes.md  methods.html  multivariate_extremes.md  notebooks.html  numerical_stability.md  provenance.html  release.html  reproducibility.html  research.html  results.html  return_times.md  reuse.html  roadmap.html  runbook.md  status.html  (+5 more)
notebooks/: 00_method_smoke_test.ipynb  01_simulated_systems_extremes.ipynb  01_synthetic_dynamics.ipynb  02_empirical_data_audit.ipynb  02_return_times_and_extremal_index.ipynb  03_macro_financial_stress_case_study.ipynb  03_rare_events_and_return_times.ipynb  04_multivariate_stress.ipynb  04_multivariate_tail_dependence.ipynb  05_article_figures.ipynb  05_econometric_baselines.ipynb  README.md
scripts/: fetch_public_data.py  generate_article_figures.py  make_article_figures.py  refresh_remote_cache.py  run_empirical_experiment.py  run_experiment.py  run_smoke_experiment.py  run_synthetic_experiment.py
tests/: test_baselines.py  test_cli.py  test_config.py  test_contracts.py  test_data.py  test_econometrics.py  test_experiments.py  test_extremes.py  test_fixtures.py  test_multivariate.py  test_numerical_edge_cases.py  test_plot_outputs.py  test_plots.py  test_recurrence.py  test_return_times.py  test_script_entrypoints.py  test_scripts_smoke.py  test_simulation.py  test_transforms.py  test_utils.py
(+19 files in other folders)
