[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynsys-econometrics"
version = "0.1.0"
description = "Dynamical-systems inspired extreme value tools for econometric crisis analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Diogo Ribeiro" }]
keywords = ["econometrics", "dynamical-systems", "extreme-value-theory", "rare-events"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/DiogoRibeiro7/dynamical_systems_econometrics"
Repository = "https://github.com/DiogoRibeiro7/dynamical_systems_econometrics"
Issues = "https://github.com/DiogoRibeiro7/dynamical_systems_econometrics/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = [
    "src/dynsys_econometrics/extremes.py",
    "src/dynsys_econometrics/plots.py",
    "src/dynsys_econometrics/return_times.py",
    "src/dynsys_econometrics/simulation.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
